unpackaged/main/default/objects/Zendesk_Comment__c/Zendesk_Comment__c.object-meta.xml
<CustomObject>
    <description>Represents an internal or public comment from Zendesk. This is populated automatically from a Workato integration called "Zendesk Ticket Assigned to PSE Queue". This integration will bring over a Zendesk ticket as a case with comment records attached.</description>
    <label>Zendesk Comment</label>
    <nameField>
        <displayFormat>ZC-{0000}</displayFormat>
        <label>Zendesk Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zendesk Comments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>