unpackaged/main/default/objects/Zendesk_Comment__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Created During PSE Service Migration Project</description>
    <label>Body</label>
    <length>70000</length>
    <type>LongTextArea</type>
</CustomField>