unpackaged/main/default/objects/Zendesk_Comment__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created During PSE Service Migration Project</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Zendesk Comments</relationshipLabel>
    <relationshipName>Zendesk_Side_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>