unpackaged/main/default/objects/Zendesk_Comment__c/fields/HTML_Body__c.field-meta.xml
<CustomField>
    <fullName>HTML_Body__c</fullName>
    <description>Created During PSE Service Migration Project</description>
    <label>HTML Body</label>
    <length>70000</length>
    <type>Html</type>
</CustomField>