unpackaged/main/default/objects/Zendesk_Comment__c/fields/Is_Internal__c.field-meta.xml
<CustomField>
    <fullName>Is_Internal__c</fullName>
    <description>Created During PSE Service Migration Project</description>
    <formula>NOT( Is_Public__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Internal</label>
    <type>Checkbox</type>
</CustomField>