unpackaged/main/default/objects/Zendesk_Comment__c/fields/Is_Public__c.field-meta.xml
<CustomField>
    <fullName>Is_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created During PSE Service Migration Project</description>
    <label>Is Public</label>
    <type>Checkbox</type>
</CustomField>