unpackaged/main/default/objects/Zendesk_Comment__c/fields/Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Date__c</fullName>
    <description>Created During PSE Service Migration Project</description>
    <label>Post Date</label>
    <type>DateTime</type>
</CustomField>