unpackaged/main/default/objects/Zendesk_Comment__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Created During PSE Service Migration Project</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>