unpackaged/main/default/objects/Zendesk_Comment__c/fields/Zendesk_ID__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_ID__c</fullName>
    <description>Created During PSE Service Migration Project</description>
    <label>Zendesk ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>