unpackaged/main/default/objects/Zendesk_Comment__c/fields/Zendesk_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_User_Name__c</fullName>
    <description>The full name of the Zendesk user that created the comment.</description>
    <inlineHelpText>The full name of the Zendesk user that created the comment.</inlineHelpText>
    <label>Zendesk User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>