unpackaged/main/default/objects/Zendesk_Comment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Body__c</columns>
    <columns>Case__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Post_Date__c</columns>
    <columns>Subject__c</columns>
    <columns>Zendesk_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>